# RubiksCube

./: CMakeLists.txt  LICENSE.md  README.md  input_state.txt
include/solver/: CLIParameters.h  CubeSolver.h  StateManager.h
include/visual/: CubeRenderer.h
src/: main.cpp
src/solver/: CLIParameters.cpp  CubeSolver.cpp  StateManager.cpp
